--- a/questions/example.tex
+++ b/questions/example.tex
@@ -1,17 +1,17 @@
 \element{example}{
     \begin{question}{example-true-false}
-        Essa proposição é verdadeira.
-        \begin{choiceshoriz}[o] % o para fixar a ordem das alternativas
-            \correctchoice{Verdadeiro}
-            \wrongchoice{Falso}
+        This proposition is true.
+        \begin{choiceshoriz}[o] % fix order of alternatives even with shuffling enabled
+            \correctchoice{True}
+            \wrongchoice{False}
         \end{choiceshoriz}
-        \explain{Uma proposição verdadeira é verdadeira.}
+        \explain{A true statement is true.}
     \end{question}
 }
 
 \element{example}{
-    \begin{question}{example-multiple}
-        O que é igual à um em \(\mathbb{Z}\)?
+    \begin{question}{example-one-choice}
+        What is equal to one in \(\mathbb{Z}\)?
         \begin{choiceshoriz}
             \correctchoice{1}
             \wrongchoice{2}
@@ -19,13 +19,13 @@
             \wrongchoice{4}
             \wrongchoice{5}
         \end{choiceshoriz}
-        \explain{Só temos um \(1\) nos números inteiros!}
+        \explain{There is only one \(1\) in the set of integers.}
     \end{question}
 }
 
 \element{example}{
-    \begin{questionmult}{example-multiple}
-        O que é igual à um em \(\mathbb{Z}_2\)?
+    \begin{questionmult}{example-multiple-choice}
+        Which below are the odd numbers?
         \begin{choiceshoriz}
             \correctchoice{1}
             \wrongchoice{2}
@@ -33,73 +33,29 @@
             \wrongchoice{4}
             \correctchoice{5}
         \end{choiceshoriz}
-        \explain{Todos os ímpares tem resto \(1\) quando divididos por \(2\).}
+        \explain{All odd numbers are divisible by \(2\).}
     \end{questionmult}
 }
 
 \element{example}{
-    \begin{question}{example-lastchoices}\QuestionIndicative % desativa a contagem de pontos dessa questão
-        Qual cor?
+    \begin{question}{example-lastchoices}\QuestionIndicative % this question is not taken into account for scoring
+        Which color do you prefer?
         \begin{choiceshoriz}
-            \wrongchoice{vermelho}
-            \wrongchoice{azul}
-            \wrongchoice{amarelo}
-            \lastchoices % fixa as últimas alternativas
-            \correctchoice{transparente}
-            \wrongchoice{não sei}
+            \correctchoice{red}
+            \correctchoice{green}
+            \correctchoice{blue}
+            \lastchoices % these last options are always fixed even with shuffling enabled
+            \correctchoice{I don't care}
+            \correctchoice{I don't know}
         \end{choiceshoriz}
-        \explain{Não existe resposta correta.
-        Essa pergunta é só para mostrar que é possível fixar as últimas alternativas.
-        }
+        \explain{There is no right or wrong answer.}
     \end{question}
 }
 
 \element{example}{
     \begin{question}{example-open}
-        Escreva \(\pi\) com duas casas decimais.
+        Write \(\pi\) with two decimal places.
         \AMCOpen{answer=3.14}{\wrongchoice[W]{w}\scoring{0}\wrongchoice[P]{p}\scoring{1}\correctchoice[C]{c}\scoring{2}}
-        \explain{O valor é \(3.14\).}
+        \explain{\(\pi = 3.14\).}
     \end{question}
-}
-
-\element{example}{
-    \begin{question}{example-random-lua}
-        \directlua{
-            a = math.random(0, 10)
-            b = math.random(0, 10)
-        }
-        Quanto vale \(\directlua{tex.print(a)} + \directlua{tex.print(b)}\)?
-        \begin{choiceshoriz}
-            \wrongchoice{\directlua{tex.print(a+b+1)}}
-            \wrongchoice{\directlua{tex.print(a+b-1)}}
-            \correctchoice{\directlua{tex.print(a+b)}}
-            \wrongchoice{\directlua{tex.print(a+b+2)}}
-            \wrongchoice{\directlua{tex.print(a+b-2)}}
-        \end{choiceshoriz}
-    \end{question}
-}
-
-\element{example}{
-    \begin{questionmultx}{example-random-lua-open}
-        \directlua{
-            a = math.random(0, 100)
-            r = a^0.5
-        }
-        Quanto vale \(\sqrt{\directlua{tex.print(a)}}\)?
-        \AMCnumericChoices{\directlua{tex.print(r)}}{digits=5, decimals=2}
-        \explain{O valor é \(\directlua{tex.print(r)}\).}
-    \end{questionmultx}
-}
-
-\element{example}{
-    \begin{questionmultx}{example-lua-import}
-        \directlua{
-            module = require("/home/seuronao/projects/seuronao/exam-cc0265-prob-est/utils/example.lua")
-            a = math.random(-9, 9)
-            b = math.random(-9, 9)
-            resposta = module.mult(a, b)
-        }
-        Quanto vale \(\directlua{tex.print(a)} \times \directlua{tex.print(b)}\)?
-        \AMCnumericChoices{\directlua{tex.print(resposta)}}{digits=2}
-    \end{questionmultx}
 }
