Set random seed to lua questions in catalog

--- a/catalog/catalog.tex
+++ b/catalog/catalog.tex
@@ -33,6 +33,7 @@ random.seed(1)
 \begin{document}
 % Commands to set the random seed (2/2)
 \AMCrandomseed{1}
+\directlua{math.randomseed(1)}
 %%% beginning of the test sheet header:
 \noindent{\ExamTitle}
 \vspace*{.5cm}
