--- a/catalog/catalog.tex
+++ b/catalog/catalog.tex
@@ -22,6 +22,15 @@ import random
 random.seed(1)
 \end{pycode}
 
+% Commands to import the python files for the questions
+\begin{pycode}
+import sys
+from pathlib import Path
+absolute_path_string = '../questions' # Question 
+sys.path.append(str(Path(absolute_path_string).resolve()))
+import example_python
+\end{pycode}
+
 % Commands to import the files with the questions
 \import{../questions}{example}
 \import{../questions}{example-lua}
