--- a/questions/example.tex
+++ b/questions/example.tex
@@ -48,7 +48,7 @@
             \correctchoice{I don't care}
             \correctchoice{I don't know}
         \end{choiceshoriz}
-        \explain{There is no right or wrong answer.}
+        \explain{There is no wrong answer.}
     \end{question}
 }
 
