--- a/catalog/catalog.tex
+++ b/catalog/catalog.tex
@@ -22,11 +22,16 @@ import random
 random.seed(1)
 \end{pycode}
 
+% Commands to import the lua files for the questions
+\directlua{
+example_lua = require "../questions/example_lua"
+}
+
 % Commands to import the python files for the questions
 \begin{pycode}
 import sys
 from pathlib import Path
-absolute_path_string = '../questions' # Question 
+absolute_path_string = '../questions' # Question
 sys.path.append(str(Path(absolute_path_string).resolve()))
 import example_python
 \end{pycode}
@@ -51,10 +56,42 @@ import example_python
 \end{minipage}
 %%% end of the header
 
+These questions use the \texttt{Auto Multiple Choice} package without any additional code.
+Some examples can be found below:
+
+\begin{description}
+    \item[Multiple Choice:] questions with only one correct answer, multiple correct answers, and even questions with no correct answers.
+    \item[Open Questions:] open space for the student to write a short answer or a long answer.
+    \item[Range:] It is also possible to have a numeric question with a range of accepted answers.
+\end{description}
+
 \section{Question Samples}
+
 \insertgroup{example}
+
 \section{Question Samples with Lua Code}
+
+These questions use the \texttt{Auto Multiple Choice} package with \texttt{Lua} code.
+Code can be used to generate random numbers so that each realization or copy of the exam has different numbers for these questions.
+
+It is necessary to use the \texttt{LuaTex} engine to compile the document when lua code is present.
+Some examples can be found below:
+
 \insertgroup{example-lua}
+
+While \texttt{Lua} is a very powerful language, it does not have all the libraries and packages such as a more popular language such as \texttt{Python}.
+
 \section{Question Samples with Python Code}
+
+These questions use the \texttt{Auto Multiple Choice} package with \texttt{Python} code.
+Code can be used to generate random numbers so that each realization or copy of the exam has different numbers for these questions.
+
+It is necessary to use the \texttt{pythontex} package to compile the document when python code is present.
+
+There are some minor inconveniences, such as the need to use the commands \texttt{\textbackslash pyc{}} and \texttt{\textbackslash py{}} to run python code inside questions.
+
+However due to the popularity of \texttt{Python}, it is possible to use many libraries and packages to generate questions.
+
 \insertgroup{example-python}
+
 \end{document}
