--- a/catalog/catalog.tex
+++ b/catalog/catalog.tex
@@ -31,7 +31,7 @@ example_lua = require "../questions/example_lua"
 \begin{pycode}
 import sys
 from pathlib import Path
-absolute_path_string = '../questions' # Question
+absolute_path_string = '../questions' # Questions folder
 sys.path.append(str(Path(absolute_path_string).resolve()))
 import example_python
 \end{pycode}
