Update package options
Rerun makes easier to develop a draft version.
It allows us to update imported code without having to delete
the generated files.

--- a/catalog/catalog.tex
+++ b/catalog/catalog.tex
@@ -10,7 +10,7 @@
 \usepackage{amssymb}
 \usepackage{color}
 \usepackage[catalog, lang=en]{automultiplechoice}
-\usepackage{pythontex}
+\usepackage[rerun=always]{pythontex}
 
 % Exam Information
 \newcommand{\ExamTitle}{\textbf{COURSE NAME\hfill Question Catalog}}
