--- a/exam-example/source.tex
+++ b/exam-example/source.tex
@@ -13,7 +13,7 @@
 \usepackage{amssymb}
 \usepackage{color}
 \usepackage[lang=en]{automultiplechoice}
-\usepackage{pythontex}
+\usepackage[rerun=always]{pythontex}
 
 % This command is used to show the solution of the question for each individual student, if you don't want to show the solution, comment it out.
 \makeatletter
