Improve header code

--- a/catalog/catalog.tex
+++ b/catalog/catalog.tex
@@ -48,11 +48,7 @@
 \AMCrandomseed{1}
 \luadirect{math.randomseed(1)}
 %%% beginning of the test sheet header:
-\noindent{\ExamTitle}
-\vspace*{.5cm}
-\begin{minipage}{.4\linewidth}
-	\centering\large\textbf{\ExamDate}
-\end{minipage}
+\noindent\ExamTitle\hfill\textbf{\ExamDate}
 %%% end of the header
 
 The \texttt{Auto Multiple Choice} can be used alongside \texttt{Lua} or \texttt{Python} code to generate random numbers so that each realization or copy of the exam has different numbers for these questions.
