--- a/exam-example/source.tex
+++ b/exam-example/source.tex
@@ -72,11 +72,7 @@
 
 \begin{examcopy}[5]
 	%%% beginning of the test sheet header:
-	\noindent{\ExamTitle}
-	\vspace*{.5cm}
-	\begin{minipage}{.4\linewidth}
-		\centering\large\textbf{\ExamDate}
-	\end{minipage}
+	\noindent\ExamTitle\hfill\textbf{\ExamDate}
 	\begin{center}
 		\emph{Duration: 2 hours.}\\
 		\emph{Talking and Electronic devices are forbidden.}\\
