--- a/exam-example/source.tex
+++ b/exam-example/source.tex
@@ -12,7 +12,7 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{color}
-\usepackage[indivanswers, lang=en]{automultiplechoice}
+\usepackage[lang=en]{automultiplechoice}
 \usepackage[gobble=auto, rerun=always]{pythontex}
 \usepackage{luacode}
 
@@ -94,7 +94,6 @@
 					\vspace*{1mm}
 				\end{minipage}
 			}}\hfill\vspace{5ex}\end{minipage}\hspace*{\fill}
-
 	}
 	%%% end of the header
 	\vspace*{0.5cm}
